# os_project

./: Cargo.toml  README.md  dependencies.txt  package-lock.json  package.json
.github/workflows/: cargo-fmt.yml
src/: cli.rs  cpu_isolation.sh  icegui.rs  index.html  main.js  main.rs  pro.rs  reset_cpu_affinity.sh  styles.css  temp_main.rs  test_cpu_isolation.sh  tui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  pro.rs
