[package]
name = "os_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
affinity = "0.1.2"
getopts = "0.2.21"
iced = "0.12"
gtk = { version = "0.15", features = ["v3_22"] }
glib = "0.15"