[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.0", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
affinity = "0.1.2"
getopts = "0.2.21"
tui = "0.18.0"
crossterm = "0.26.0"
termion = "1.5"
tokio = { version = "1.41.1", features = ["full"] }
pyo3 = { version = "0.18", features = ["extension-module"] }
sysinfo = "0.29"
lazy_static = "1.4"
